add_subdirectory(decay)

add_executable(deduction_method_template_in_class_template methodTemplateInClassTemplate.cpp)
target_link_libraries(deduction_method_template_in_class_template PRIVATE doctest)
add_test(NAME "deduction::method-template-in-class-template" COMMAND deduction_method_template_in_class_template)

add_executable(deduction_from_func_arg deduce_from_func_arg.cpp)
target_link_libraries(deduction_from_func_arg PRIVATE doctest)
add_test(NAME "deduction::from-func-arg" COMMAND deduction_from_func_arg)

add_executable(deduction_reference_and_T deduce_reference_and_T.cpp)
target_link_libraries(deduction_reference_and_T PRIVATE doctest)
add_test(NAME "deduction::references_and_T" COMMAND deduction_reference_and_T)