add_executable(design_variable_template_global_arrays global_arrays.cpp)
target_link_libraries(design_variable_template_global_arrays PRIVATE doctest)
add_test(NAME "design::variable_template::global_arrays" COMMAND design_variable_template_global_arrays)

add_executable(design_variable_template_constexpr_variable constexpr_variable.cpp)
target_link_libraries(design_variable_template_constexpr_variable PRIVATE doctest)
add_test(NAME "design::variable_template::constexpr_variable" COMMAND design_variable_template_constexpr_variable)
